# rotranslator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_binary.py
src/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  progress.py  translator.py
tests/: test_cli.py  test_config.py  test_translator.py
