[project]
name = "rotranslator"
version = "0.1.0"
description = "Zero-config Roblox locale translation REPL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "googletrans>=4.0.2",
  "pyperclip>=1.9.0",
  "rich>=13.9.4",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.13.0",
]
test = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "pytest-asyncio>=0.26.0",
]

[project.scripts]
rotranslator = "src.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
